# itic-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatBox.jsx
src/: config.py  main.py
src/api/: endpoints.py
src/chat/: chat_service.py
src/extractor/: extractor.py
src/preprocessor/: preprocessor.py
src/utils/: chunker.py  db_client.py  llm_client.py  scripts.py
